FIX: Wrap long headers to avoid too large pleats.

--- a/couchdb/_attachments/work.css
+++ b/couchdb/_attachments/work.css
@@ -65,7 +65,6 @@ body {
 
 div.metadata {
     padding:0.5em 2em;
-    white-space:nowrap;
 }
 
 .creator {
